Mon Jul  9 15:34:24 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* config.sub, config.guess: updated to latest versions to fix
	compile problems in new arches like IA64 or HPPA.

Tue Jun 19 22:58:29 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* po/POTFILES.in, *.po: Added profiles.c to the list, and updated 
	.po files.

	* src/color.c: Small fixes, removed some GTK warnings.

	* src/config.h.in: New update

	* src/gnome-mud.c: Removed load_wizard(), and added load_profiles()

	* src/gnome-mud.h [struct wizard_data2]: added.
	[struct profile_data]: added.

	* src/init.c (destroy): Added saving for profiles and connections.
	(init_window): Added profiles, and remove old data*
	
	* src/data.c (data_button_close): Changed to new profiles.
	(window_data): Changed to new profiles.

	* src/net.c: Changed old lists[*] to use the new profile-lists.

	* src/profiles.c: Complely new and working connection and profile
	list functions.

Sat Jun  9 18:17:24 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am: added LOCALEDIR to INCLUDES, so the
	translated mo's can get installed wherever "datadir" points to.
	* src/gnome-mud.c: removed the static LOCALEDIR define, and
	removed the libintl.h include too. Every file including gnome.h
	has libintl.h included already, so we need to wipe those of every
	c source file, later.
	* po/sv.po, po/fr.po: corrected charset and encoding definitions.

Fri Jun  8 17:15:58 CEST 2001  Robin Ericsson  <robin@noname4us.com>

	* src/color.c [(load|save)_colors): Removed old code for saving
	to file, and changed to use gnome_config_(get|set)_vector.

Fri Jun  8 15:34:02 CEST 2001  Robin Ericsson  <robin@noname4us.com>

	* src/init.c: Added window_color() to the menu again.

Thu May 31 22:05:49 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c: Fixed bug #408834.

Thu May 31 21:15:27 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/profiles.c: Added, going to contain the new connection wizard
	