@@ -284,106 +284,6 @@ void textfield_add (GtkWidget *text_widget, gchar *message, gint colortype)
             break;
         }
         
-        /*while ( *message != '\0' || message == NULL )
-        {
-            if ( *message == '\033' || *message =='\e')
-            {
-                while ( !done )
-                {
-                    switch ( *message )
-                    {
-                    case '[':
-                        found_1 = TRUE;
-                        break;
-                        
-                    case ';':
-                        found_2 = TRUE;
-                        break;
-                        
-                    case 'm':
-                        found_3 = TRUE;
-                        break;
-                    }
-                    if ( found_1 && !found_2 && !found_3)
-                    {
-                        message++;
-
-                        if ( *message == 'm' )
-                        {
-                            *//* This is color reset *//*
-                            foreground = &color_white;
-                            found_2 = TRUE;
-                            found_3 = TRUE;
-                        }
-                        else
-                        {
-                            found_2 = TRUE;
-                            *ptr = *message;
-                            bold = atoi(ptr);
-
-                            message++; message++;
-                            ptr[0] = *message;
-                            message++;
-
-                            if ( *message != 'm' )
-                            {
-                                ptr[1] = *message;
-                            }
-                            color = atoi(ptr);
-
-                            if ( bold == 0 )
-                                *//* wonder if these colors are right *//*
-                                switch (color)
-                                {
-                                case 30: foreground = &color_black;   break;
-                                case 31: foreground = &color_red;     break;
-                                case 32: foreground = &color_green;   break;
-                                case 33: foreground = &color_brown;   break;
-                                case 34: foreground = &color_blue;    break;
-                                case 35: foreground = &color_purple;  break;
-                                case 36: foreground = &color_cyan;    break;
-                                case 37: foreground = &color_white;   break;
-                                }
-                            else if ( bold == 1 )
-                            {
-                                switch (color)
-                                {
-                                case 30: foreground = &color_grey;       break;
-                                case 31: foreground = &color_orange;     break;
-                                case 32: foreground = &color_lightgreen; break;
-                                case 33: foreground = &color_yellow;     break;
-                                case 34: foreground = &color_lightblue;  break;
-                                case 35: foreground = &color_pink;       break;
-                                case 36: foreground = &color_lightcyan;  break;
-                                case 37: foreground = &color_white;      break;
-                                }
-                            }
-
-                        }
-                    }
-                    message++;
-
-                    if ((found_1 == TRUE) && (found_2 == TRUE) && (found_3 == TRUE))
-                        done = TRUE;
-                }
-
-                found_1 = FALSE;
-                found_2 = FALSE;
-                found_3 = FALSE;
-                done    = FALSE;
-                ptr[0]  = ptr[1] = '\0';
-            }
-            else
-            {
-                if ( *message != '\r' )
-                {
-                    gtk_text_insert (GTK_TEXT (text_field), display_font,
-                                     foreground, NULL, message, 1);
-                }
-                message++;
-            }
-            }*/
-
         while ( (c = *message) )
         {
             switch ( state )
